# syscoffee

./: docker-compose.yml
backend/: Dockerfile  README.md  config.py  pyproject.toml
backend/src/: app.py  models.py  schemas.py
backend/src/db/: __init__.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: addc0a8fe06e_init.py  fbe1211e2b62_init.py
backend/src/routers/: auth.py  categorias.py  planos.py  populate.py  produtos.py  users.py
backend/src/services/: auth.py
backend/tests/: conftest.py  test_app.py  test_auth.py  test_auth_service.py  test_db.py
frontend/: .env.local  Dockerfile  env.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  middlware.tsx  page.tsx  providers.tsx
frontend/app/(painel)/: layout.tsx
frontend/app/(protected)/: layout.tsx
frontend/app/actions/: DeleteProduto.tsx  DeleteUser.tsx  getPlanos.tsx  getProdutos.tsx  getUser.tsx  postProdutos.tsx  postUser.tsx  putUser.tsx
frontend/app/admin/: dashboard.tsx  page.tsx  productRegistration.tsx  settings.tsx  style.css
frontend/app/perfil/: page.tsx
frontend/components/: AddProduto.tsx  Carrinho.tsx  PainelAdmin.tsx  PainelUser.tsx  PlanosPainel.tsx  ProdutoPainel.tsx  Sobre.tsx  UserPainel.tsx  UsuariosPainel.tsx  checkoutProduto.tsx  checkoutplano.tsx  navegationMenu.tsx  planos-cards.tsx  planos.tsx  produtos-cards.tsx  produtos-carousel.tsx
frontend/components/auth/: button-sign-out.tsx  sign-in-dialog.tsx  sign-up-dialog.tsx
frontend/context/: CartContext.tsx
frontend/lib/: axios.ts  tanstack.ts
frontend/types/: next-auth.d.ts
(+8 files in other folders)
