[tool.poetry]
name = "backend"
version = "0.1.0"
description = "BackEnd do projeto de Construção de Software UFMS"
authors = ["Murilo Lobo Teixeira <murilo.lobo@ufms.brr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.3.4"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.31"
fastapi = "^0.111.0"
pyjwt = "^2.8.0"
pwdlib = {extras = ["argon2"], version = "^0.2.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.5"

[tool.pytest.ini_options]
pythonpath = "."

[tool.ruff]
exclude = [".venv"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
